--- a/sp-config/item-service-dev.yml
+++ b/sp-config/item-service-dev.yml
@@ -1,7 +1,11 @@
 spring:
   application:
     name: item-service
-    
+  rabbitmq:
+    host: 192.168.161.132
+    port: 5672
+    username: admin
+    password: admin    
 #server:
 #  port: 8001
   
@@ -22,3 +26,5 @@ spring:
 
 server:
   port: 8002
+
+
