--- a/sp-config/order-service-dev.yml
+++ b/sp-config/order-service-dev.yml
@@ -1,7 +1,11 @@
 spring:
   application:
     name: order-service
-    
+  rabbitmq:
+    host: 192.168.161.132
+    port: 5672
+    username: admin
+    password: admin  
 # server:
 #  port: 8201
   
@@ -34,3 +38,7 @@ spring:
   
 server:
   port: 8202
+  
+spring:
+  ......
+  
