--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -1,11 +1,15 @@
 sp:
   user-service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
+    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"},{\"id\":99, \"username\":\"aaa\",\"password\":\"111\"}]"
 
 spring:
   application:
     name: user-service
-    
+  rabbitmq:
+    host: 192.168.161.132
+    port: 5672
+    username: admin
+    password: admin    
 server:
   port: 8101
   
